getc ourse by id
